[gd_scene load_steps=2 format=3 uid="uid://c36g5mrlolfim"]

[ext_resource type="Script" path="res://ProdGen/levels_main.gd" id="1_43k7o"]

[node name="LevelsMain" type="Node2D"]
position = Vector2(0, 12)
script = ExtResource("1_43k7o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 200
alignment = 1

[node name="Button" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 48
text = "Prev"

[node name="Button2" type="Button" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Next"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
selected = 0
item_count = 5
popup/item_0/text = "Planet 1"
popup/item_1/text = "Planet 2"
popup/item_1/id = 1
popup/item_2/text = "Planet 3"
popup/item_2/id = 2
popup/item_3/text = "Planet 4"
popup/item_3/id = 3
popup/item_4/text = "Planet 5"
popup/item_4/id = 4

[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="item_selected" from="CanvasLayer/MarginContainer/VBoxContainer/HBoxContainer2/OptionButton" to="." method="_on_option_button_item_selected"]
